package br.com.agrodrone.domain.enums;

/**
 * Estados de um drone conforme o diagrama de estados UML.
 */
public enum EstadoDrone {
    OCIOSO, PREPARANDO, EM_VOO, RETORNANDO, POUSADO, MANUTENCAO;
}
