package br.com.agrodrone.domain.enums;

/**
 * Estados de uma missão de voo segundo o diagrama de estados UML.
 */
public enum EstadoMissao {
    AGENDADA, EM_EXECUCAO, COMPLETA, ABORTADA;
}
