package br.com.agrodrone.domain.enums;

/**
 * Papéis de acesso disponíveis no sistema.
 */
public enum Papel {
    ADMINISTRADOR,
    OPERADOR;
}
