package br.com.agrodrone.domain.enums;

/**
 * Tipos de sensores instaláveis em drones.
 */
public enum TipoSensor {
    CAMERA,
    TEMPERATURA,
    UMIDADE,
    NDVI;
}
