package br.com.agrodrone.model;

/**
 * Interface que define que uma entidade possui um identificador único.
 */
public interface Identificavel {
    Long obterId();
}
